Reorganização de pastas

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,4 +1,4 @@
-% rebase('view/base.html', title='Index')
+% rebase('base.html', title='Index')
 
 <div class="jumbotron">
   <h1>Sistema Login!</h1>
