--- a/app/views/pagina404.html
+++ b/app/views/pagina404.html
@@ -1,4 +1,4 @@
-% rebase('view/base.html', title='Página não encontrada!!!')
+% rebase('base.html', title='Página não encontrada!!!')
 
 <div class="alert alert-info" role="alert">Página não encontrada!!!</div>
 <img src="404.png" alt="Página não encontrada" >
