--- a/app/views/verificacao_login.html
+++ b/app/views/verificacao_login.html
@@ -1,4 +1,4 @@
-% rebase('view/base.html', title='Verificação login')
+% rebase('base.html', title='Verificação login')
 % if sucesso:
      <div class="alert alert-success">
           <strong>Sucesso!!!</strong> Olá {{ nome }}, seja bem-vindo(a)!!!
