--- a/app/views/cadastro.html
+++ b/app/views/cadastro.html
@@ -8,7 +8,7 @@
 			    	<h3 class="panel-title">Faça o cadastro:</h3>
 			 	</div>
 			  	<div class="panel-body">
-			    	<form accept-charset="UTF-8" role="form" action="/" method="post">
+			    	<form accept-charset="UTF-8" role="form" action="cadastro" method="post">
                     <fieldset>
 			    	  	<div class="form-group">
 					        <p>Escolha um username:</p>
