--- a/app/views/base.html
+++ b/app/views/base.html
@@ -9,8 +9,12 @@
 		<script type="text/javascript" charset="utf-8" src="login.js"></script>
 	</head>
 	<body>
-		<center>
-			{{!base}}
-		</center>
+		<div class="container">
+	        <div class="row vertical-offset-100">
+	        	<div class="col-md-4 col-md-offset-4">
+        	    	<div class="panel panel-default">
+		    			{{!base}}
+				    </div>
+			    </div>
 	</body>
 </html>
