--- a/app/views/lista_usuarios.html
+++ b/app/views/lista_usuarios.html
@@ -4,7 +4,11 @@
      </div>
 
      <ul class="list-group">
-          % for usuario in usuarios:
-           <li class="list-group-item">{{ usuario.username }}</li>
+          % if acesso:
+               % for usuario in usuarios:
+                <li class="list-group-item">{{ usuario.username }}</li>
+          % end
+          % else:
+              <center><p style="color:red"><strong>Acesso negado!!!</strong></p></center>
           % end
      </ul>
