--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,8 +1,6 @@
 % rebase('base.html', title='Fazer login')
 
-	% if not sucesso:
-		<div class="alert alert-danger">Falha ao realizar o login!!!</div>
-	% end
+
 	<div class="panel-heading">
 		<h3 class="panel-title">Login</h3>
 	</div>
@@ -19,4 +17,7 @@
 		</fieldset>
 	</form>
 	<p><a href="cadastro">Clique aqui</a> para fazer o cadastro.</p>
+	% if not sucesso:
+		<p style="color:red"><strong>Usuário e/ou senha incorretos!!!</strong></p>
+	% end
 </div>
